# Moonvault

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  btc_locks.json  invoices.json  knki.wallet  known_peers.json  mooncoin.chain  mooncoin.chain.bak  mooncoin_backup_20251214_023156.json
docs/: BTC_LOCK.md  BTC_OBSERVER_MODULE_v1.0.md  CHANGELOG.md  CLI_SPECIFICATION_v1.0.md  COMO_IDENTIFICAR_MOONCOIN_FALSO.txt  GUIA_DE_SUPERVIVENCIA.txt  INSTRUCCIONES_DE_LANZAMIENTO.txt  MOONCOIN_BITCOIN_OPERATIONAL_MODEL_NORMATIVE_v1.0.md  QUICKSTART.md  REFERENCE_FLOW_v1.0.md  SECURITY.md  SECURITY_AND_FAILURE_GUIDE_v1.0.md
mooncoin_data/: db  snap.000000000000A069  snap.000000000000B023
src/: Cargo.toml  README.md  backup.rs  block.rs  btc_lock.rs  checkpoints.rs  cli_wallet.rs  crypto.rs  dandelion.rs  difficulty.rs  dns_seeds.rs  explorer.rs  fee_estimator.rs  fee_system.rs  genesis.rs  hdwallet.rs  labels.rs  lib.rs  main.rs  main.rs.bak  mempool.rs  merkle.rs  network.rs  node.rs  peer_manager.rs  pruning.rs  reorg.rs  rpc.rs  script.rs  segwit.rs  spv.rs  storage.rs  testnet.rs  transaction.rs  tx_builder.rs  utxo.rs  validation.rs  vault_service.rs  wallet.rs  watch_wallet.rs
src/atomic_swaps/: htlc_script.rs  mod.rs  protocol.rs  swap.rs
src/channels/: commitment.rs  htlc.rs  manager.rs  mod.rs  state.rs
src/contracts/: builder.rs  engine.rs  mod.rs  opcodes.rs
src/inheritance/: config.rs  heir.rs  mod.rs  process.rs  script.rs
src/privacy/: e2e_tests.rs  integration.rs  keys.rs  mod.rs  pedersen.rs  rangeproof.rs  ring.rs  rpc.rs  scanner.rs  shielded_tx.rs  stealth.rs  validation.rs
src/recovery/: config.rs  guardian.rs  mod.rs  process.rs  script.rs
src/vaults/: config.rs  manager.rs  mod.rs  script.rs  state.rs
