[package]
name = "moonvault"
version = "4.0.0"
edition = "2021"
authors = ["KNKI"]
description = "MoonVault - Bitcoin Security Infrastructure. Protecting your Bitcoin, not replacing it."
repository = "https://github.com/llhmo0n/MoonVault"
license = "MIT"
keywords = ["bitcoin", "security", "vault", "custody", "infrastructure"]
categories = ["cryptography", "command-line-utilities"]

[[bin]]
name = "moonvault"
path = "src/main.rs"

[dependencies]
# Criptografía base
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["rand-std"] }
dirs = "5.0"

# Criptografía de privacidad
curve25519-dalek = { version = "4.1", features = ["digest", "rand_core"] }
sha3 = "0.10"

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bs58 = "0.5"
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async/Networking
tokio = { version = "1.35", features = ["full"] }

# Utilidades
rand = "0.8"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

# Database
sled = "0.34"

# HD Wallet (BIP39/BIP32)
tiny-bip39 = "1.0"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }

# Wallet Encryption
aes-gcm = "0.10"

# Block Explorer Web
hyper = { version = "0.14", features = ["full"] }

# Global State
lazy_static = "1.4"

# Contracts
sha1 = "0.10"
num-bigint = "0.4"

# HTTP Client for Esplora API (BTC Lock)
ureq = { version = "2.9", features = ["json"] }

[profile.release]
opt-level = 3
lto = true

